# 2dlaser_people_detect

./: CMakeLists.txt  README.md  package.xml
cfg/: PeopleDetector.cfg
launch/: bag_to_pcd.launch  train_body_detector.launch
src/: assemble_ls_to_pc2.cpp  bag_to_pcd.cpp  calc_people_features.cpp  euc_cluster_extraction.cpp  pc_segmentation.cpp  train_body_detector.cpp  train_body_detector.cpp.old
