<package>
  <name>laser_people_detect</name>
  <version>0.0.10</version>
  <description>people Detector using a machine learning approach to find people like patterns of horizonal laser scanner readings.</description>
  <author>Derek Wong</author>
  <maintainer email="whj0131@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>
  <url>none</url>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>bfl</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>bfl</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>map_laser</run_depend>

</package>
